--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,11 @@ body {
     background-color: #6caff1;
 }
 
-.container {
+.wrapper {
     background-color: green;
+    text-align: center;
+    position: absolute:
+    top: 50%;
 }
 .btn {
     background-color: orange;
@@ -11,15 +14,11 @@ body {
 }
 .digits {
     color: white;
-    text-align: center;
     font-size: 120px;
     font-family: 'Roboto Slab', serif;
 }
 
-.blinky {
-}
-
-<!--.blinker {
+/*.blinker {
     width: 50px;
     color: white;
     float: left;
@@ -30,6 +29,8 @@ body {
     font-size: 100px;
     font-family: 'Roboto Slab', serif;
 }
+
 #hour {
-    text-align: right;
-}-->
+    text-align: right;*/
+
+
