--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,19 +3,20 @@ body {
 }
 
 .wrapper {
+    width: 800px;
     background-color: green;
     text-align: center;
-    position: absolute:
-    top: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 200px;
+    font-family: 'Roboto Slab', serif;
 }
 .btn {
     background-color: orange;
-    
 }
 .digits {
     color: white;
     font-size: 120px;
-    font-family: 'Roboto Slab', serif;
 }
 
 /*.blinker {
