--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,8 @@ body {
     margin-right: auto;
     margin-left: auto;
     margin-top: 200px;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'open sans';
+    font-weight: 300;
 }
 .btn {
     background-color: orange;
