--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -127,7 +127,7 @@ body {
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222;
-  background-color: #6caff1; }
+  background-color: #00BCD4; }
 /*Charles: I modified the font to Open Sans rather than Raleway because Raleway has shit numbers.
 /*Charles: I also added the background color to here.
 
@@ -136,7 +136,8 @@ body {
 h1, h2, h3, h4, h5, h6 { 
   margin-top: 0;
   margin-bottom: 2rem;
-  font-weight: 300; }
+  font-weight: 300;
+  color: white; }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -157,7 +158,21 @@ Charles: I multiplied all the below h sizes by 2 because they were too small bef
 }
 
 p {
-  margin-top: 0; }
+  margin-top: 0;
+  color: white; }
+
+div {
+  color: white;
+}
+
+/* Progress Bar
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.progbar { 
+  background-color: #FFF;
+  width: 72rem;
+  height: 5px;
+  margin-left: auto;
+  margin-right: auto; }
 
 
 /* Links
@@ -178,7 +193,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: #FFF;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -188,8 +203,6 @@ input[type="button"] {
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
@@ -202,7 +215,7 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #333;
+  color: #00838F;
   border-color: #888;
   outline: 0; }
 .button.button-primary,
