removed start-btn and added .time

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -169,6 +169,17 @@ div {
   color: white;
 }
 
+.time {
+  color: #FFF;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase; 
+  text-decoration: none;
+}
+
 /* Progress Bar
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .progbar { 
