--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -189,30 +189,23 @@ div {
  }
 
 .progressvalue {
+  width: 100%;
   height: 5px; 
-  background-color: #FFF;
-   }
+  background-color: #fff;
+}
 
-.progressbar {
-  background-color: white;
-  width: 75%;
-  height: 5px;
-  margin-left: auto;
-  margin-right: auto;
+.breakbar, .workbar {
+  background-color: #fff;
+  height: 5px; 
+  float: left;
 }
 
 .breakbar {
-  background-color: red;
   width: 5.6%;
-  height: 5px; 
-  opacity: 0.6;
-  float: left; }
+  opacity: 0.6; }
 
 .workbar {
-  background-color: yellow;
   opacity: 0.3;
-  height: 5px; 
-  float: left;
 }
 
 .work1 {
@@ -227,7 +220,20 @@ div {
   width: 16.5%;
 }
 
+.breakexplain {
+  margin-top: 2%;
+}
 
+.breakline, .workline {
+  height: 1px;
+  float: left;
+}
+
+.breakline {
+  background-color: #fff;
+  width: 5.6%;
+  opacity: 1;
+}
 
 
 /* Links
