--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -188,7 +188,7 @@ div {
   margin-right: auto;
  }
 
-.progressvalue {
+.progressvalue, .shield {
   width: 100%;
   height: 5px; 
   background-color: #fff;
