--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -193,10 +193,12 @@ div {
 }
 
 
-.progressvalue, .shield{
+.progressvalue{
   width: 100%;
   height: 5px; 
   background-color: #fff;
+  position: relative;
+  margin-bottom: -5px;
 }
 
 .break {
