Added paragraph copy
The text is not that easy to ready. What do you think would be the best
way to improve the legibility ?

Disclaimer: I added that disclaimer because of a 1984-like dream I had
the other night. It doesn't need to make the final cut.

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -188,7 +188,10 @@ Charles: I multiplied all the below h sizes by 2 because they were too small bef
 p {
   margin-top: 0;
   color: white;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  text-align: left;
+  word-spacing: 1px;
+}
 
 div {
   color: white;
